# Bobbys_World_Tools

./: .env.example  .gitignore  ADB_AUTHORIZATION_TRIGGER.md  ADB_FASTBOOT_DETECTION.md  AGENTS.md  ALL_NEXT_STEPS_COMPLETE.md  ALL_REMAINING_STEPS_COMPLETE.md  API_INTEGRATION.md  ARCHITECTURE_V2_MODULAR_NODES.md  AUTHORIZATION_HISTORY_TRACKING.md  AUTHORIZATION_TRIGGERS_API.md  AUTHORIZATION_TRIGGERS_COMPLETE.md  AUTHORIZATION_TRIGGERS_IMPLEMENTATION.md  AUTHORIZATION_TRIGGERS_LIVE_INTEGRATION.md  AUTOMATED_TESTING.md  AUTOMATED_TESTING_PIPELINE.md  BACKEND_API_IMPLEMENTATION.md  BACKEND_AUTHORIZATION_API_GUIDE.md  BACKEND_INTEGRATION_STATUS.md  BACKEND_SETUP.md  BATCH_DIAGNOSTICS_INTEGRATION.md  BATCH_FLASHING.md  BENCHMARKING_QUICKSTART.md  BOBBYS_SECRET_ROOMS.md  BOBBYS_SECRET_WORKSHOP_COMPLETE.md  BOBBYS_WORKSHOP_PRODUCTION_MODE_AUDIT.md  BOBBY_DEV_ARSENAL.md  BOBBY_SECRET_WORKSHOP.md  BOOTFORGEUSB_API.md  BOOTFORGEUSB_BACKEND_WIRING.md  BOOTFORGEUSB_REAL_CONNECTION.md  BOOTFORGEUSB_REAL_SCANNING.md  BOOTFORGEUSB_V02_INTEGRATION.md  BOOTFORGE_USB_INTEGRATION_MANUAL.md  BOOTFORGE_USB_INTEGRATION_PLAN.md  BUILD_COMPLETE_BUNDLE.md  BUILD_EXE_GUIDE.md  BUILD_INSTALLERS_COMPLETE.md  BUILD_READY_SUMMARY.md  BUILD_STATUS_LEGENDARY.md  (+167 more)
core/: README.md
pandora/apps/phoenix-key/: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src-tauri/: Cargo.toml  tauri.conf.json  tauri.nsis.conf.json  test_bundled.txt  test_bundled_err.txt
src-tauri/bundle/: test_err.txt
src-tauri/bundle/resources/: package.json
src-tauri/bundle/resources/core/catalog/operations/: backup-device.json  key-event.json  network-info.json  restore-device.json  uninstall-app.json
src-tauri/bundle/resources/core/lib/: adb.js  operation-envelope.js
src-tauri/bundle/resources/runtime/manifests/: policies-v2.json  workflows-v2.json
src-tauri/bundle/resources/server/: authorization-triggers.js  catalog.js  index.js  locks.js  operations.js  tools-inspect.js  tools-manager.js
src-tauri/bundle/resources/server/middleware/: api-envelope.js  audit-logger.js  requireAdmin.js
src-tauri/bundle/resources/server/routes/: trapdoor.js
src-tauri/bundle/resources/server/routes/v1/: adb.js  cases.js  fastboot.js  flash.js  frp.js  hotplug.js  ios.js  jobs.js  mdm.js  system-tools.js
src-tauri/bundle/resources/server/server/: index.js  locks.js  tools-manager.js
src-tauri/bundle/resources/server/utils/: audit-logger.js.bak  policy-gate-evaluator.js  resource-limits.js  retry-circuit-breaker.js  safe-exec.js  startup-validation.js  workflow-executor-enhanced.js
src-tauri/icons/ios/: Final Boss Fixes.html
src-tauri/icons/ios/Final Boss Fixes_files/: js  saved_resource.html
src-tauri/resources/core/lib/: adb.js
src-tauri/resources/server/: index.js  operations.js  tools-inspect.js  tools-manager.js
src-tauri/resources/server/middleware/: request-validator.js
src-tauri/resources/server/routes/v1/: fastboot.js  frp.js  ios.js  mdm.js  ready.js
src-tauri/resources/server/utils/: safe-exec.js  system-metrics.js
src-tauri/src/: bootforge_backend.rs  fastapi_backend.rs  lib.rs  main.rs  py_client.rs  python_backend.rs
(+763 files in other folders)
