[package]
name = "bobbys-workshop"
version = "1.0.0"
description = "Bobby's Workshop - Professional Device Repair Toolkit"
authors = ["Bobby's Workshop Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "shell-sidecar", "http-request", "shell-open", "path-all", "fs-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
bootforgeusb = { path = "../libs/bootforgeusb", default-features = false }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
