[package]
name = "bobbys-workshop"
version = "3.0.1"
description = "Bobby's Workshop - Professional Device Repair Toolkit"
authors = ["Bobby's Workshop Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
bootforgeusb = { path = "../libs/bootforgeusb", default-features = false }
dirs = "6.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
