[package]
name = "bobbys-secret-workshop"
version = "4.0.1"
description = "Bobby's Secret Workshop - Secrets & Traps - Ultimate Device Manipulation Toolkit"
authors = ["Bobby's Secret Workshop Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4"] }
bootforgeusb = { path = "../libs/bootforgeusb", default-features = false }
dirs = "6.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
