[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-key"
version = "0.1.0"
description = "Phoenix Key - Device Recovery and Diagnostic Tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Pandora Codex Team"}
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.4.0",
]

[project.scripts]
phoenix-key = "main:main"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
